--- a/TaskAPI.Services/TaskAPI.Services.csproj
+++ b/TaskAPI.Services/TaskAPI.Services.csproj
@@ -1,11 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaskAPi.DataAccess\TaskAPi.DataAccess.csproj" />
     <ProjectReference Include="..\TaskAPI.Models\TaskAPI.Models.csproj" />
+   
   </ItemGroup>
-
+ 
 </Project>
